RabbitMQ is replaced by Kafka